@@ -103,6 +103,12 @@ Active=false
 TimeFormat="%H:%M:%S"
 # date format [default: %x; legal: see strftime(3)]
 DateFormat="%x"
+# Display the title bar in two-line mode. Note that with four lines or more
+# the title is always shown. [default: true; legal: true, false]
+#ShowTitle=false
+# Disables the heartbeat icon in the top right corner. By default, the server
+# setting for the heartbeat is used. [default: false; legal: true, false]
+#DisableHeartbeat=true
 
 
 [BigClock]
