@@ -14,6 +14,7 @@ v0.5dev (ongoing development)
  * Build system: Rename configure.in to configure.ac
  + hd44780: Add support for FreeBSD's iic I2C framework
  + hd44780: New connection type 'piplate' (J. Brogdon)
+ * lcdproc client: Add option to turn off title and heartbeat on OldTime screen
 
 v0.5.6
  - Remove deprecated CFontz633 driver. Use CFontzPacket with Model=633 instead!
